Adjust card language list padding to avoid overflow in smaller screens

--- a/assets/styles/cards.css
+++ b/assets/styles/cards.css
@@ -76,7 +76,7 @@ section.card-container > div.card,
 }
 
 .card-details ul.project-lang > li {
-  padding: 4px 11px;
+  padding: 4px 6px;
   background: var(--primary-color-3);
   border-radius: 8px;
   margin-right: 8px;
